- prehled financi, pocet položek

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -35,13 +35,13 @@
 		"sender": "Odesílatel",
 		"confirmPassword": "Potvrzení hesla",
 		"company_name" : "Název firmy",
-        "credit": "Kredit",
-        "share": "Podíl Nohe",
+        "credit": "Přehled financí",
+        "share": "Sazba",
         "credit_all": "Úspornost",
-        "credit_reset": "Nefakturováno",
-        "charts_label": "Součet cen aukcí",
-        "charts_start": "vytvořené",
-        "charts_end": "ukončené",
+		"credit_reset": "Nevyfakturované aukce",
+        "charts_label": "Celková cena aukcí",
+        "charts_start": "Počáteční",
+        "charts_end": "Konečná",
 		"ico" : "IČO",
 		"bank_account" : "Bankovní účet",
 		"address" : "Adresa",
@@ -222,7 +222,8 @@
 				"8": "Jiné"
 			},
 			"freight_size": "Velikost (slovy)",
-			"freight_weight": "Váha položky (kg)",
+			"freight_weight": "Váha položky",
+			"freight_quantity": "Počet položek",
 			"email_addressee": "Email adresáta",
 			"end_auction": "Ukončení aukce",
 			"delivery": "Dodání zásilky",
