--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -35,10 +35,9 @@
 		"sender": "Sender",
 		"confirmPassword": "Confirm password",
 		"company_name" : "Company name",
-        "credit": "Credit",
-        "share": "Nohe Share",
+        "credit": "Finance overview",
+        "share": "Rate",
         "credit_all": "Economy",
-        "credit_reset": "Unbilled amount",
         "charts_label": "Auctions summary",
         "charts_start": "Created",
         "charts_end": "Done",
@@ -222,7 +221,8 @@
               "8": "Other"
             },
 			"freight_size": "Item size (words)",
-			"freight_weight": "Item weight (kg)",
+			"freight_weight": "Item weight",
+			"freight_quantity": "Items quantity",
 			"email_addressee": "Email addressee",
 			"end_auction": "End auction",
 			"delivery": "Delivery",
