--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -221,6 +221,7 @@
               "8": "Other"
             },
 			"freight_size": "Item size (words)",
+			"freight_size_detail": "Item size",
 			"freight_weight": "Item weight",
 			"freight_quantity": "Items quantity",
 			"email_addressee": "Email addressee",
