--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -62,6 +62,7 @@
 		"send_password": "Send password",
 		"your_acc": "Personal Data",
 		"your_acc_info": "Personal Information",
+        "finances": "Overview of finances",
 		"contact_acc": "Contact",
 		"actual_password": "Actual password",
 		"new_password": "New password",
@@ -162,6 +163,7 @@
 		},
 		"tab": {
 			"account": "Profile",
+            "finances": "Overview of finances",
 			"profile": "Personal Data",
 			"change_password": "Change password",
 			"notification": "Notification",
