--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -41,6 +41,7 @@
         "charts_label": "Celková cena aukcí",
         "charts_start": "Počáteční",
         "charts_end": "Konečná",
+        "no_finance": "Zatím jste nevytvořili žádnou aukci.",
 		"ico" : "IČO",
 		"bank_account" : "Bankovní účet",
 		"address" : "Adresa",
