--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -1,5 +1,8 @@
 {
 	"texts": {
+		"tooltips": {
+			"remove_company_notification_list": "Remove"
+		},
 		"login": "Login",
 		"username": "Username",
 		"name": "Name",
@@ -119,6 +122,9 @@
 		"create_auction_dialog_item_price": "Item price",
 		"create_auction_dialog_item_total_price": "Total price",
 		"user": {
+			"tooltips": {
+				"close_detail": "Close"
+			},
 			"detail": "User detail",
 			"vacation": "Vacation",
 			"delete": "Delete user",
@@ -148,6 +154,9 @@
 			}
 		},
 		"shipment": {
+			"tooltips": {
+				"close_detail": "Close"
+			},
 			"new": "New",
 			"finished": "Finished",
 			"detail": "Shipment detail",
@@ -186,6 +195,11 @@
 			"map": "Map of drivers"
 		},
 		"auction": {
+			"tooltips": {
+				"close_detail": "Close",
+				"open_detail": "Open auction detail",
+				"favourite": "Favourite"
+			},
 			"template_name": "Template name",
 			"no_template": "No template",
 			"select_template_label": "Created Templates",
