--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -200,6 +200,7 @@
 				"open_detail": "Otevřít detail aukce",
 				"favourite": "Oblíbené"
 			},
+			"history_auction_first_item": "Vytvoření aukce",
 			"template_name": "Jméno šablony",
 			"no_template": "Bez šablony",
 			"select_template_label": "Vytvořené Šablony",
