--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -391,5 +391,19 @@
 		"driver_deleted": "Řidič byl smazán",
 		"notification_set": "Nastavení notifikací uloženo",
 		"bid_auction": "Přihození úspěšné"
+	},
+	"months": {
+		"0": "Leden",
+		"1": "Únor",
+		"2": "Březen",
+		"3": "Duben",
+		"4": "Květen",
+		"5": "Červen",
+		"6": "Červenec",
+		"7": "Srpen",
+		"8": "Září",
+		"9": "Říjen",
+		"10": "Listopad",
+		"11": "Prosinec"
 	}
 }
