--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -392,5 +392,19 @@
 		"driver_deleted": "Driver was deleted",
 		"notification_set": "Notification settings saved.",
 		"bid_auction": "Bid success"
+	},
+	"months": {
+		"0": "January",
+		"1": "February",
+		"2": "March",
+		"3": "April",
+		"4": "May",
+		"5": "June",
+		"6": "July",
+		"7": "August",
+		"8": "September",
+		"9": "October",
+		"10": "November",
+		"11": "December"
 	}
 }
