- grafy ve financích

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -42,6 +42,7 @@
         "credit_all": "Úspornost",
 		"credit_reset": "Nevyfakturované aukce",
         "charts_label": "Celková cena aukcí",
+		"charts_history_label": "Historie vašich aukcí",
         "charts_start": "Počáteční",
         "charts_end": "Konečná",
         "charts_price": "Cena",
