--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -41,7 +41,9 @@
         "credit": "Finance overview",
         "share": "Rate",
         "credit_all": "Economy",
+		"credit_reset": "Unbayed auctions",
         "charts_label": "Auctions summary",
+		"charts_history_label": "Auctions history",
         "charts_start": "Created",
         "charts_end": "Done",
         "charts_price": "Price",
