- změna managementu kreditu. Nyní bude 50% z uspory

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -38,9 +38,10 @@
 		"sender": "Odesílatel",
 		"confirmPassword": "Potvrzení hesla",
 		"company_name" : "Název firmy",
-        "share": "Sazba",
-        "credit_all": "Úspornost",
-		"credit_reset": "Nevyfakturované aukce",
+        "share": "Poplatek",
+		"tariff": "Sazba",
+        "credit_all": "Celková úspora",
+		"credit_reset": "Aktuální úspora",
         "charts_label": "Celková cena aukcí",
 		"charts_history_label": "Historie vašich aukcí",
         "charts_start": "Počáteční",
