--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -39,9 +39,10 @@
 		"confirmPassword": "Confirm password",
 		"company_name" : "Company name",
         "credit": "Finance overview",
-        "share": "Rate",
-        "credit_all": "Economy",
-		"credit_reset": "Unbayed auctions",
+        "share": "Charge",
+		"tariff": "Tariff",
+        "credit_all": "Total economy",
+		"credit_reset": "Current economy",
         "charts_label": "Auctions summary",
 		"charts_history_label": "Auctions history",
         "charts_start": "Created",
