- tooltipy ve financích

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -38,16 +38,23 @@
 		"sender": "Odesílatel",
 		"confirmPassword": "Potvrzení hesla",
 		"company_name" : "Název firmy",
-        "share": "Poplatek",
-		"tariff": "Sazba",
-        "credit_all": "Celková úspora",
-		"credit_reset": "Aktuální úspora",
-        "charts_label": "Celková cena aukcí",
-		"charts_history_label": "Historie vašich aukcí",
-        "charts_start": "Počáteční",
-        "charts_end": "Konečná",
-        "charts_price": "Cena",
-        "no_finance": "Zatím jste nevytvořili žádnou aukci.",
+		"finances": {
+			"title": "Přehled financí",
+			"share": "Poplatek",
+			"tariff": "Sazba",
+			"credit_all": "Celková úspora",
+			"credit_reset": "Aktuální úspora",
+			"charts_label": "Celková cena aukcí",
+			"charts_history_label": "Historie vašich aukcí",
+			"charts_start": "Počáteční",
+			"charts_end": "Konečná",
+			"charts_price": "Cena",
+			"no_finance": "Zatím jste nevytvořili žádnou aukci.",
+			"tooltips": {
+				"current_economy": "Úspora od posledního uhrazení poplatku",
+				"tariff": "Aktuální sazba, která určuje výši poplatku. Tato hodnota je individuální."
+			}
+		},
 		"ico" : "IČO",
 		"bank_account" : "Bankovní účet",
 		"address" : "Adresa",
@@ -69,7 +76,6 @@
 		"send_password": "Poslat heslo",
 		"your_acc": "Osobní údaje",
 		"your_acc_info": "Informace",
-        "finances": "Přehled financí",
 		"contact_acc": "Kontaktní údaje",
 		"actual_password": "Aktuální heslo",
 		"new_password": "Nové heslo",
