--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -38,17 +38,24 @@
 		"sender": "Sender",
 		"confirmPassword": "Confirm password",
 		"company_name" : "Company name",
-        "credit": "Finance overview",
-        "share": "Charge",
-		"tariff": "Tariff",
-        "credit_all": "Total economy",
-		"credit_reset": "Current economy",
-        "charts_label": "Auctions summary",
-		"charts_history_label": "Auctions history",
-        "charts_start": "Created",
-        "charts_end": "Done",
-        "charts_price": "Price",
-        "no_finance": "You haven't create any auction yet.",
+		"finances": {
+			"title": "Overview of finances",
+			"credit": "Finance overview",
+			"share": "Charge",
+			"tariff": "Tariff",
+			"credit_all": "Total economy",
+			"credit_reset": "Current economy",
+			"charts_label": "Auctions summary",
+			"charts_history_label": "Auctions history",
+			"charts_start": "Created",
+			"charts_end": "Done",
+			"charts_price": "Price",
+			"no_finance": "You haven't create any auction yet.",
+			"tooltips": {
+				"current_economy": "Savings since last charge",
+				"tariff": "Standard rate that determines the amount of the fee. This value is individual."
+			}
+		},
 		"ico" : "Identification number",
 		"bank_account" : "Bank account",
 		"address" : "Address",
@@ -70,7 +77,6 @@
 		"send_password": "Send password",
 		"your_acc": "Personal Data",
 		"your_acc_info": "Personal Information",
-        "finances": "Overview of finances",
 		"contact_acc": "Contact",
 		"actual_password": "Actual password",
 		"new_password": "New password",
