expired auction route, v sezanmu aukci jsou pouze nbeukoncene aukce

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -106,6 +106,7 @@
 		"company": "Moje firma",
 		"assignment": "Přiřazování",
 		"win_auction": "Vyhrané aukce",
+		"expired_auction": "Ukončené aukce",
 		"vacation": "Dovolená",
 		"add_vacation": "Nastavit",
 		"delete_vacation": "Odebrat",
@@ -207,6 +208,7 @@
 			"list": "Seznam",
 			"favourite": "Oblíbené",
 			"bids": "Přihazuji",
+			"expired": "Ukončené",
 			"win": "Vyhrané",
 			"new": "Nové",
 			"finished": "Ukončené",
