--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -107,6 +107,7 @@
 		"company": "My company",
 		"assignment": "Assignment",
 		"win_auction": "Win auction",
+		"expired_auction": "Expired auction",
 		"vacation": "Vacation",
 		"add_vacation": "Add",
 		"delete_vacation": "Delete",
@@ -208,6 +209,7 @@
 			"list": "List",
 			"favourite": "Favourite",
 			"bids": "Bids",
+			"expired": "Expired",
 			"win": "Win",
 			"new": "New",
 			"finished": "Finished",
