minimální cástka na položku je 1kč

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -275,7 +275,8 @@
 		"weight_is_number": "Hmotnost musí být číslo",
 		"weight_is_low": "Hmotnost musí být alespoň 1kg",
 		"price_is_number": "Cena musí být číslo",
-		"price_is_low": "Minimální cena je 50 Kč",
+		"price_is_low": "Minimální cena položky je 1 Kč",
+		"total_price_is_low": "Minimální počáteční cena aukce je 50 Kč",
 		"bid_is_number": "Příhoz musí být číslo",
 		"psc_is_number": "PSČ musí být číslo",
 		"ico_is_number": "IČO musí být číslo",
