--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -275,7 +275,8 @@
 		"weight_is_number": "Weight must be a number",
 		"weight_is_low": "Weight must be at least 1kg",
 		"price_is_number": "Price must be a number",
-		"price_is_low": "Price must be at least 50 Czk",
+		"price_is_low": "Price of item must be at least 1 Czk",
+		"total_price_is_low": "Total price must be at least 50 Czk",
 		"bid_is_number": "Bid must be a number",
 		"psc_is_number": "ZIP must be a number",
 		"ico_is_number": "Identification number must be a number",
