psc in createAuction

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -216,6 +216,7 @@
 			"street": "Ulice",
 			"city": "Město",
 			"rest": "čp.",
+			"psc": "PSČ",
 			"go_next": "Pokračovat",
 			"state": {
 				"label": "Stát",
