--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -92,6 +92,7 @@
 		"expired_auction": "Expired auction",
         "admin": "Admin",
         "users": "Users",
+		"users_activities": "Users activities",
 		"bid_auction_modal_title": "Are you sure?",
 		"delete_auction_template": "Are you sure?",
 		"bid_auction_modal_text": "Your bid is: ",
@@ -150,7 +151,8 @@
 			"created": "Created",
 			"create_auction": "Create Auction",
             "users": "Users",
-			"map": "Map of drivers"
+			"map": "Map of drivers",
+			"activities": "Activity"
 		},
 		"auction": {
 			"tooltips": {
