upgrade gulp, condition and terms in footer

--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -12,6 +12,7 @@
 		"date": "Datum",
 		"amount": "Příhoz",
 		"no_amounts": "Žádné příhozy",
+		"conditions": "Obchodnímy podmínky a pravidla ochrany osobních údajů",
 		"accept_conditions_1": "Prohlašuji, že jsem se seznámil/a a souhlasím s ",
 		"accept_conditions_2": "obchodnímy podmínkami a s pravidly ochrany osobních údajů.",
 		"bid": "Přihodit",
