--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -12,9 +12,9 @@
 		"date": "Datum",
 		"amount": "Příhoz",
 		"no_amounts": "Žádné příhozy",
-		"conditions": "Obchodnímy podmínky a pravidla ochrany osobních údajů",
+		"conditions": "Obchodní podmínky a pravidla ochrany osobních údajů",
 		"accept_conditions_1": "Prohlašuji, že jsem se seznámil/a a souhlasím s ",
-		"accept_conditions_2": "obchodnímy podmínkami a s pravidly ochrany osobních údajů.",
+		"accept_conditions_2": "obchodními podmínkami a s pravidly ochrany osobních údajů.",
 		"bid": "Přihodit",
 		"auction_complete": "Aukce již skončila.",
 		"auction_win": "Vaše nabídka je nejnižší.",
