--- a/locales/CZ/translation.json
+++ b/locales/CZ/translation.json
@@ -31,6 +31,9 @@
 		"detail": "Detail",
 		"confirmPassword": "Potvrzení hesla",
 		"company_name" : "Název firmy",
+		"invoices": {
+			"title": "Faktury"
+		},
 		"finances": {
 			"title": "Přehled financí",
 			"share": "Poplatek",
@@ -140,6 +143,7 @@
 		"tab": {
 			"account": "Profil",
             "finances": "Přehled financí",
+			"invoices": "Faktury",
 			"profile": "Osobní údaje",
 			"change_password": "Změna hesla",
 			"notification": "Notifikace",
