--- a/locales/EN/translation.json
+++ b/locales/EN/translation.json
@@ -31,6 +31,9 @@
 		"detail": "Detail",
 		"confirmPassword": "Confirm password",
 		"company_name" : "Company name",
+		"invoices": {
+			"title": "Invoices"
+		},
 		"finances": {
 			"title": "Overview of finances",
 			"share": "Charge",
@@ -140,6 +143,7 @@
 		"tab": {
 			"account": "Profile",
             "finances": "Overview of finances",
+			"invoices": "Invoices",
 			"profile": "Personal Data",
 			"change_password": "Change password",
 			"notification": "Notification",
